# car-go-clean

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  go.mod
cmd/car-go-clean/: main.go
docs/superpowers/plans/: 2026-05-13-car-go-clean-daemon.md  2026-05-14-safe-cleaning.md
docs/superpowers/specs/: 2026-05-13-car-go-clean-daemon-design.md
internal/config/: config.go  config_test.go
packaging/launchd/: com.dcchuck.car-go-clean.plist
packaging/release/: README.md
packaging/systemd/: car-go-clean.service
src/: activity.rs  cache.rs  cleaner.rs  cli.rs  config.rs  daemon.rs  lib.rs  lockfile.rs  logging.rs  main.rs  safety.rs  scanner.rs  store.rs
tests/: cache_cleaner_daemon.rs  cli.rs  config.rs  logging.rs  packaging.rs  safety.rs  scanner.rs  store.rs
