[package]
name = "car-go-clean"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
description = "Periodically run cargo clean on Rust projects and track reclaimed disk space."
license = "MIT"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
fs2 = "0.4"
humantime-serde = "1.1"
humantime = "2.3"
ignore = "0.4"
libc = "0.2"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
